--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -15,14 +15,16 @@ Combining all of the above, these are the recommended steps for upgrading a Shut
 <Info>Note: Please check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.</Info>
 
 1. Upgrade your `cargo-shuttle` CLI with one of the options below:
+   - `cargo shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
    - `curl -sSfL https://www.shuttle.rs/install | bash` (Linux and macOS)
+   - `iwr https://www.shuttle.rs/install-win | iex` (Windows)
    - `cargo binstall cargo-shuttle`
    - `cargo install cargo-shuttle`
 
 2. Update your project's `shuttle-...` dependencies in `Cargo.toml`:
    ```toml Cargo.toml
    shuttle-runtime = "0.48.0"
-   # etc
+   # do the same for other shuttle dependencies
    ```
 
 3. Test that your project works with `cargo check` / `cargo build` / `cargo shuttle run`.
