--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -21,20 +21,21 @@ cargo shuttle <COMMAND> --help
 
 | Command    | Description |
 | ---------- | ----------- |
-| init       | Create a new Shuttle project |
+| init       | Generate a Shuttle project from a template |
 | run        | Run a Shuttle service locally |
 | deploy     | Deploy a Shuttle service |
-| deployment | Manage deployments of a Shuttle service |
+| deployment | Manage deployments of a Shuttle service [aliases: depl] |
 | status     | View the status of a Shuttle service |
-| stop       | Stop this Shuttle service |
-| logs       | View the logs of a deployment in this Shuttle service |
-| project    | List or manage projects on Shuttle |
-| resource   | Manage resources of a Shuttle project |
+| stop       | Stop a Shuttle service |
+| logs       | View logs of a Shuttle service |
+| project    | Manage projects on Shuttle [aliases: proj] |
+| resource   | Manage resources [aliases: res] |
 | clean      | Remove cargo build artifacts in the Shuttle environment |
 | login      | Login to the Shuttle platform |
 | logout     | Log out of the Shuttle platform |
-| generate   | Generate shell completions |
+| generate   | Generate shell completions and man page |
 | feedback   | Open an issue on GitHub and provide feedback |
+| upgrade    | Upgrade the cargo-shuttle binary |
 | help       | Print this message or the help of the given subcommand(s) |
 
 ## Cookbook / Cheat Sheet
