--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -102,5 +102,5 @@ Example configuration for Zsh on Linux: add `eval "$(cargo shuttle generate shel
 
 ### Utility
 
-- `cargo shuttle --debug <command>`: Turn on tracing output for Shuttle libraries. (WARNING: can print sensitive data)
+- `cargo shuttle <command> --debug`: Turn on tracing output for Shuttle libraries. (WARNING: can print sensitive data)
 - `cargo shuttle deploy --output-archive <path>`: Dump the deployment archive to disk instead of deploying it. Useful for debugging.
