chore: shuttle.rs -> shuttle.dev in most places

--- a/community/contribute.mdx
+++ b/community/contribute.mdx
@@ -38,7 +38,7 @@ Please refer to the README.md or DEVELOPING.md files in the respective repositor
     icon="github"
     color="#ffffff"
   >
-    Documentation hosted on docs.shuttle.rs.
+    Documentation hosted on docs.shuttle.dev.
   </Card>
   <Card
     title="www"
@@ -46,7 +46,7 @@ Please refer to the README.md or DEVELOPING.md files in the respective repositor
     icon="github"
     color="#ffffff"
   >
-    Our website shuttle.rs, including the blog and Launchpad newsletter.
+    Our website shuttle.dev, including the blog and Launchpad newsletter.
   </Card>
   <Card
     title="deploy-action"
