--- a/configuration/domain-names.mdx
+++ b/configuration/domain-names.mdx
@@ -55,6 +55,4 @@ If you are adding a subdomain, add a `CNAME` record from your subdomain to your 
 
 # Set up SSL certificate
 
-When your DNS record has propagated, you want to get an SSL certificate signed by Shuttle.
-
-For now, you have to reach out to the Shuttle team on Discord or `support@shuttle.rs` to set up your SSL certificate manually, but this will soon be automated.
+TODO
