--- a/configuration/environment.mdx
+++ b/configuration/environment.mdx
@@ -83,7 +83,7 @@ cargo shuttle deploy --name project-dev --secrets Secrets.dev.toml
 ## Limitations
 
 <Warning>
-  Most of the limits below are due to change as we roll out paid tiers. Read more about Pricing [here](https://www.shuttle.rs/pricing).
+  Most of the limits below are due to change as we roll out paid tiers. Read more about Pricing [here](https://www.shuttle.dev/pricing).
 </Warning>
 
 Currently we limit a project container's memory usage to 4 GB during high contention and 6 GB otherwise.
