--- a/configuration/project-name.mdx
+++ b/configuration/project-name.mdx
@@ -8,7 +8,7 @@ Your Shuttle Project Name determines which subdomain your project is hosted on (
 Therefore, your project name has to be unique.
 You might also want to use a name that is short and easy to remember.
 
-<Info>In the free Community Tier, you can own a total of 3 project names at once. See [Pricing](https://www.shuttle.rs/pricing) for Pro tier benefits, such as more projects.</Info>
+<Info>In the free Community Tier, you can own a total of 3 project names at once. See [Pricing](https://www.shuttle.dev/pricing) for Pro tier benefits, such as more projects.</Info>
 
 ## Specifying Project Name
 
