--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -14,13 +14,13 @@ The install script finds the optimal alternative below for installing the latest
 Run it on Linux and macOS with:
 
 ```sh
-curl -sSfL https://www.shuttle.rs/install | bash
+curl -sSfL https://www.shuttle.dev/install | bash
 ```
 
 Or on Windows with:
 
 ```powershell
-iwr https://www.shuttle.rs/install-win | iex
+iwr https://www.shuttle.dev/install-win | iex
 ```
 
 ### Pre-built binary
