--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -5,7 +5,7 @@ icon: "terminal"
 
 Interaction with the Shuttle services is mainly done with through the `cargo-shuttle` Command Line Interface (CLI).
 
-Some tasks, such as viewing logs, can also be done in the [Shuttle Console](https://console.shuttle.rs/).
+Some tasks, such as viewing logs, can also be done in the [Shuttle Console](https://console.shuttle.dev/).
 
 Commands are issued in the format: `cargo shuttle [OPTIONS] <COMMAND>`.
 
