--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -4,7 +4,7 @@ description: "Seamlessly connect AWS RDS with your Rust applications on Shuttle.
 icon: "aws"
 ---
 
-This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.rs). The following engines are supported:
+This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.dev). The following engines are supported:
 - Postgres
 - MySQL
 - MariaDB
@@ -35,7 +35,7 @@ The RDS instance created by Shuttle has the following specifications and feature
 - 1 Node
 - No Proxy
 
-The pricing of this instance can be found on our [pricing page](https://www.shuttle.rs/pricing).
+The pricing of this instance can be found on our [pricing page](https://www.shuttle.dev/pricing).
 
 If you require a different configuration, please contact us on [Discord](https://discord.gg/shuttle) or email us at hello@shuttle.rs. We can provision any size or configuration of RDS to suit your needs - a full list of RDS features can be found [here](https://aws.amazon.com/rds/features/)
 
