--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -4,7 +4,7 @@ description: Including secrets in your deployment
 icon: "user-secret"
 ---
 
-This plugin manages secrets on [Shuttle](https://www.shuttle.rs).
+This plugin manages secrets on [Shuttle](https://www.shuttle.dev).
 
 ## Usage
 
