--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -3,7 +3,7 @@ title: "Shuttle Shared Databases"
 icon: "database"
 ---
 
-This plugin manages databases on [Shuttle](https://www.shuttle.rs) and connects them to your app.
+This plugin manages databases on [Shuttle](https://www.shuttle.dev) and connects them to your app.
 A shared database is in the same cluster as other user's databases, but it is not accessible by other users.
 
 If you want a high performing and isolated database, consider [Shuttle AWS RDS](./shuttle-aws-rds).
