--- a/templates/fullstack/saas-template.mdx
+++ b/templates/fullstack/saas-template.mdx
@@ -22,7 +22,7 @@ users will be able to view their customers, sales records as well as some analyt
 - Rust
 - Node.js/NPM.
 - Typescript.
-- [cargo-shuttle](https://www.shuttle.rs)
+- [cargo-shuttle](https://www.shuttle.dev)
 
 ## Getting Started
 
