--- a/templates/tutorials/serverless-calendar-app.mdx
+++ b/templates/tutorials/serverless-calendar-app.mdx
@@ -87,7 +87,7 @@ server, it just generates a calendar event on the fly and returns it.
 ### How I built it
 
 You probably noticed that the URL contains "shuttleapp.rs". That's because I'm
-using [shuttle.rs](https://github.com/shuttle-hq/shuttle) to host the website.
+using [shuttle.dev](https://github.com/shuttle-hq/shuttle) to host the website.
 
 Shuttle is a hosting service for Rust projects and I wanted to try it out for a
 long time.
@@ -125,7 +125,7 @@ git commit -m "Hello World"
 ```
 
 To deploy the code, I needed to sign up for a shuttle account. This can be done
-over at https://console.shuttle.rs/.
+over at https://console.shuttle.dev/.
 
 It will ask you to authorize it to access your Github account.
 
@@ -372,7 +372,7 @@ cargo shuttle deploy
 ```
 
 Right, that's all. It's that easy. Thanks to the folks over at
-[shuttle.rs](https://github.com/shuttle-hq/shuttle) for making this possible.
+[shuttle.dev](https://github.com/shuttle-hq/shuttle) for making this possible.
 
 The calendar app is now available at https://zerocal.shuttleapp.rs.
 
