--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -16,8 +16,8 @@ Combining all of the above, these are the recommended steps for upgrading a Shut
 
 1. Upgrade your `cargo-shuttle` CLI with one of the options below:
    - `cargo shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
-   - `curl -sSfL https://www.shuttle.rs/install | bash` (Linux and macOS)
-   - `iwr https://www.shuttle.rs/install-win | iex` (Windows)
+   - `curl -sSfL https://www.shuttle.dev/install | bash` (Linux and macOS)
+   - `iwr https://www.shuttle.dev/install-win | iex` (Windows)
    - `cargo binstall cargo-shuttle`
    - `cargo install cargo-shuttle`
 
