--- a/templates/tutorials/authentication.mdx
+++ b/templates/tutorials/authentication.mdx
@@ -216,7 +216,7 @@ Now back in the code we add a parameter with
 `#[shuttle_shared_db::Postgres] pool: Database`. The
 `#[shuttle_shared_db::Postgres]` annotation tells shuttle to provision a
 Postgres database using the
-[infrastructure from code design](https://www.shuttle.rs/blog/2022/05/09/ifc).
+[infrastructure from code design](https://www.shuttle.dev/blog/2022/05/09/ifc).
 
 ```rust
 type Database = sqlx::PgPool;
@@ -513,7 +513,7 @@ pub(crate) async fn new_session(
 ```
 
 In the full demo, we use the
-[new type pattern](https://www.shuttle.rs/blog/2022/07/28/patterns-with-rust-types#the-new-type-pattern)over
+[new type pattern](https://www.shuttle.dev/blog/2022/07/28/patterns-with-rust-types#the-new-type-pattern)over
 a u128 to make this easier, but we will stick with a u128 type here.
 
 Now we have our token, we need to package it into a cookie value. We will do it
@@ -594,7 +594,7 @@ let session_token = req
 ### Auth middleware
 
 In the last post, we went into detail about middleware.
-[You can read more about it in more detail there](https://www.shuttle.rs/blog/2022/08/04/middleware).
+[You can read more about it in more detail there](https://www.shuttle.dev/blog/2022/08/04/middleware).
 
 In our middleware, we will get a little fancy and make the user pulling lazy.
 This is so that requests that don't need user data don't have to make a database
@@ -772,7 +772,7 @@ async fn post_login(
 ```
 
 Then we refer back to the
-[signup section](https://docs.shuttle.rs/guide/authentication-tutorial.html#using-html-forms)
+[signup section](https://docs.shuttle.dev/guide/authentication-tutorial.html#using-html-forms)
 and replicate the same HTML form and handler that renders the Tera template as
 seen before but for a login screen. At the end of that we can add two new routes
 with three handlers completing the demo:
