--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to Shuttle's Docs - Start Building Backends Fast"
+title: "Shuttle Docs - Start Building Backends Fast"
 description: "Begin your Shuttle journey with our comprehensive documentation. Learn how Shuttle simplifies Rust cloud development through easy-to-follow guides."
 icon: "hand-wave"
 ---
